--- a/etc/notebooks/Observer/bass/Bow height envelopes.ipynb
+++ b/etc/notebooks/Observer/bass/Bow height envelopes.ipynb
@@ -15,16 +15,13 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "res = 2000\n",
-    "from surge.materials.observer.time_signatures import time_signatures\n",
-    ""
+    "from surge.materials.observer.time_signatures import time_signatures\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -64,9 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## offsets_4 = (time_signatures[3])\n",
     "total_duration_4 = float(sum_time_signatures(time_signatures[3]))\n",
@@ -91,23 +86,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
